Fix display of logos on mobile

--- a/assets/scss/pages/_marca.scss
+++ b/assets/scss/pages/_marca.scss
@@ -1,6 +1,9 @@
 .logo-container{
-  @include grid-column(3);
   border: solid 1px $light-grey;
+
+  @include grid-media($tablet-grid) {
+    @include grid-column(3);
+  }
 }
 
 .marca-page-logo-content {
@@ -10,7 +13,7 @@
   display: flex;
   justify-content: center;
   flex-flow: column nowrap;
-  padding: 20px;
+  padding: 5px;
 }
 
 .marca-page-logo {
@@ -24,5 +27,7 @@
 }
 
 .marca-page-info {
-  @include grid-column(9);
+  @include grid-media($tablet-grid) {
+    @include grid-column(9);
+  }
 }
